@@ -229,22 +229,29 @@ switch(async_load[?"type"])
 		break;
 		
 		
-	case "AdMob_AppOpenAd_OnLoaded":
-		var success = async_load[?"success"]
-	break
+	// ########### APP OPEN ###########
 		
+	// AdMob_AppOpenAd_Load succeeded
+	case "AdMob_AppOpenAd_OnLoaded":
+		break;
+		
+	// AdMob_AppOpenAd_Load failed
 	case "AdMob_AppOpenAd_OnLoadFailed":
-	break
+		break;
 	
+	// AdMob_AppOpenAd got dismissed
 	case "AdMob_AppOpenAd_OnDismissed":
-	break
+		break;
 	
+	// AdMob_AppOpenAd_Show failed
 	case "AdMob_AppOpenAd_OnShowFailed":
-		AdMob_AppOpenAd_Load()
-	break
+		// At this point the app open ad failed to show.
+		AdMob_AppOpenAd_Load(display_landscape)
+		break;
 	
 	case "AdMob_AppOpenAd_OnFullyShown":
-		AdMob_AppOpenAd_Load()
-	break
+		// At this point the app open ad succeeded to show.
+		AdMob_AppOpenAd_Load(display_landscape)
+		break;
 }
 
